--- a/QtLaba3/mainwindow.ui
+++ b/QtLaba3/mainwindow.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>301</height>
+    <height>350</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>400</width>
-    <height>301</height>
+    <height>350</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>400</width>
-    <height>301</height>
+    <height>350</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -60,7 +60,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="StringB">
+     <widget class="QLineEdit" name="StringA">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -77,7 +77,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="StringA"/>
+     <widget class="QLineEdit" name="StringB"/>
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
