--- a/QtLaba3/mainwindow.ui
+++ b/QtLaba3/mainwindow.ui
@@ -81,38 +81,28 @@
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0" colspan="2">
-       <widget class="QPushButton" name="Show">
-        <property name="text">
-         <string>Вывести многочлены</string>
-        </property>
-       </widget>
+      <item row="2" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QPushButton" name="division">
+          <property name="text">
+           <string>Деление</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="remains">
+          <property name="text">
+           <string>Остаток</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="Sum">
         <property name="text">
          <string>Сумма</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="subtraction">
-        <property name="text">
-         <string>Вычитание</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="mult">
-        <property name="text">
-         <string>Умножение</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="division">
-        <property name="text">
-         <string>Деление</string>
         </property>
        </widget>
       </item>
@@ -123,10 +113,31 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="mult">
+        <property name="text">
+         <string>Умножение</string>
+        </property>
+       </widget>
+      </item>
       <item row="3" column="1">
        <widget class="QPushButton" name="palindrome">
         <property name="text">
          <string>Палиндром</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="subtraction">
+        <property name="text">
+         <string>Вычитание</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QPushButton" name="Show">
+        <property name="text">
+         <string>Вывести многочлены</string>
         </property>
        </widget>
       </item>
