--- a/QtLab4_2/mainwindow.ui
+++ b/QtLab4_2/mainwindow.ui
@@ -36,19 +36,23 @@
      <widget class="QSpinBox" name="interval"/>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="start">
       <property name="text">
        <string>Старт</string>
       </property>
      </widget>
     </item>
     <item>
+     <widget class="QPushButton" name="stop">
+      <property name="text">
+       <string>Стоп</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPlainTextEdit" name="plainTextEdit"/>
-      </item>
-      <item>
-       <widget class="QPlainTextEdit" name="plainTextEdit_2"/>
+       <widget class="QPlainTextEdit" name="turn"/>
       </item>
      </layout>
     </item>
@@ -60,7 +64,7 @@
      <x>0</x>
      <y>0</y>
      <width>458</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
