task in comments

--- a/QtLab4_2/mainwindow.ui
+++ b/QtLab4_2/mainwindow.ui
@@ -54,6 +54,9 @@
       <item>
        <widget class="QPlainTextEdit" name="turn"/>
       </item>
+      <item>
+       <widget class="QPlainTextEdit" name="output"/>
+      </item>
      </layout>
     </item>
    </layout>
